2007-03-02  Tim-Philipp Müller  <tim at centricular dot net>

	Patch by: Young-Ho Cha  <ganadist at chollian net>

	* ext/dts/gstdtsdec.c: (gst_dtsdec_handle_frame),
	(gst_dtsdec_change_state):
	  Don't do forced downmixing to stereo, but check what downstream
	  can do and let libdts do the downmixing based on that (#400555).

2007-03-02  Tim-Philipp Müller  <tim at centricular dot net>

	Patch by: Lutz Mueller  <lutz topfrose de>

	* ext/neon/gstneonhttpsrc.c: (gst_neonhttp_src_class_init),
	(gst_neonhttp_src_init), (gst_neonhttp_src_set_property),
	(gst_neonhttp_src_set_uri), (gst_neonhttp_src_set_proxy),
	(gst_neonhttp_src_send_request_and_redirect),
	(gst_neonhttp_src_uri_set_uri):
	* ext/neon/gstneonhttpsrc.h:
	  Simplify _set_uri() and _set_proxy() and remove the unused ishttp
	  member (#388050).

	* tests/check/elements/neonhttpsrc.c: (GST_START_TEST):
	  Fix bogus URI to something that actually exists, otherwise we just
	  bypass the test (and also to something that doesn't redirect, since
	  neonhttpsrc doesn't seem to handle this very gracefully yet)

2007-03-01  Chris Lord <chris@openedhand.com>

	Reviewed by Christian Schaller <christian@fluendo.com>

	Fixes Bug 357055
	* ext/ivorbis/Makefile.am:
	* ext/ivorbis/vorbisdec.c: Add support for Vorbis streams
	* ext/ivorbis/vorbisdec.h
	* ext/ivorbis/vorbis.c :

2007-03-01  Jan Schmidt  <thaytan@mad.scientist.com>

	* tests/check/Makefile.am:
	Draw plugins in from the build tree sys/ dir, rather than
	picking up the already installed versions.

2007-02-28  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	  Convert to new AG_GST style.

2007-02-27  Christian Schaller <christian at fluendo dot com>

	* sys/direct*: Add Pioneers of the Inevitable to copyright
	* sys/macosxvideosink: Add Pioneers of the Inevitable to copyright

2007-02-27  Edward Hervey  <edward@fluendo.com>

	* sys/osxvideo/cocoawindow.h:
	* sys/osxvideo/cocoawindow.m:
	* sys/osxvideo/osxvideosink.h: