@@ -1,5 +1,13 @@
 2007-03-02  Tim-Philipp Müller  <tim at centricular dot net>
 
+	* ext/dts/gstdtsdec.c: (gst_dtsdec_init), (gst_dtsdec_sink_event):
+	  A few small clean-ups.
+
+	* gst/real/gstrealaudiodec.c: (gst_real_audio_dec_setcaps):
+	  More debug output for failure cases.
+
+2007-03-02  Tim-Philipp Müller  <tim at centricular dot net>
+
 	Patch by: Young-Ho Cha  <ganadist at chollian net>
 
 	* ext/dts/gstdtsdec.c: (gst_dtsdec_handle_frame),
